Fix code review findings: wire initFromResolver, add thread safety, harden introspector
- CRITICAL: Call Sonic2Constants.initFromResolver() and Sonic3kConstants.initFromResolver()
  from GameModuleRegistry.initializeResolver() so profile overrides propagate to static fields
- Fix duplicate rom.readAllBytes() call by hoisting it before profile loading
- Add synchronized to all RomAddressResolver instance methods for thread safety
- Return Set.copyOf() snapshot from getResolvedKeys() instead of live view
- Add SUPER_SONIC_ANIM_ prefix to ProfileGenerator categorization rules
- Add bounds check in RomPatternScanner.readValue() for out-of-range offsets
- Extract shared RomReadUtil with bounds-checked readBigEndian32/readBigEndian16
- Fix searchEnd underflow in introspector chains via RomReadUtil.safeSearchEnd()
- Validate CLI --rom/--output flags reject other flags as values
- Add --game value validation against known game types
- Add ROM file size limit (8MB) in introspector main

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>